<resources>
    <string name="app_name">VC Assignment</string>
    <string name="apply">Apply</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Retry</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="expiry_date_ascending">Expiry Date — Ascending</string>
    <string name="expiry_date_descending">Expiry Date — Descending</string>
    <string name="no_internet_connection_image">No Internet Connection Image</string>
    <string name="image">Image</string>
    <string name="item_image">Item image</string>
    <string name="trending_indicator">Trending Indicator</string>
</resources>
