<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/sort_by"
            android:textColor="@color/md_grey_700"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_grey_300"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <RadioButton
                android:id="@+id/ascendingSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:foreground="?android:selectableItemBackground"
                android:layoutDirection="rtl"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/expiry_date_ascending"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/descendingSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:foreground="?android:selectableItemBackground"
                android:layoutDirection="rtl"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/expiry_date_descending"
                android:textAlignment="textStart"
                android:textSize="16sp" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>