<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextAppearance="@style/ToolbarTitleStyle"
                app:subtitleTextAppearance="@style/ToolbarSubTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.ToolbarTheme" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sortFilterViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <com.techneapps.vcassignment.utils.widgets.ImageTextView
                    android:id="@+id/sortView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_sort_black_16dp"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Sort" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1sp"
                    android:layout_height="48sp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintEnd_toStartOf="@+id/filterView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/sortView"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.techneapps.vcassignment.utils.widgets.ImageTextView
                    android:id="@+id/filterView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_filter_list_black_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Filter" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/md_grey_300"
                    app:layout_constraintTop_toBottomOf="@+id/filterView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fastScrollEnabled="true"
                app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
                app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
                app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
                app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/noInternetConnectionContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/noInternetConnectionImage"
                    android:layout_width="120sp"
                    android:layout_height="120sp"
                    android:src="@drawable/error"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/no_internet_connection_image" />

                <TextView
                    android:layout_marginTop="10sp"
                    android:textSize="16sp"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:id="@+id/noInternetConnectionMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_internet_connection"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noInternetConnectionImage" />

                <Button
                    android:layout_marginTop="10sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:id="@+id/noInternetConnectionBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160sp"
                    android:layout_height="40sp"
                    android:layout_gravity="end|center_vertical"
                    android:background="@color/md_blue_600"
                    android:onClick="retryConnection"
                    android:text="@string/retry"
                    android:textColor="@color/md_white_1000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/noInternetConnectionMessage" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>